UIOR-1450 feat: :sparkles: Add deprecated prefixes/suffixes
Squash commits
Use Checkbox for prefixes and suffixes deprecated flag in settings
Add formatter to prefixes, suffixes settings to visualize the deprecated checkbox
Use react-final-form for connectedControlledVocab
Include aria-label for prefix and suffix checkboxes in settings

Add filter for prefix and suffix settings for the poform create and edit
Add tests for validateName functions
Add test for hinting to deprecated state for prefix and suffix
Use react-intl in getPrefixSuffixOptions

Increase needed interface version for prefixes and suffixes
Add en translations for deprecated prefixes and suffixes
BREAKING keyword to Changelog for UIOR-1450 for breaking changes

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -457,10 +457,12 @@
   "orderDetails.orderNumberPrefix": "Prefix",
   "orderDetails.orderNumberSuffix": "Suffix",
   "orderDetails.orderType": "Order type",
+  "orderDetails.prefix.deprecated": "{name} (deprecated)",
   "orderDetails.poNumber": "PO number",
   "orderDetails.reEncumber": "Re-encumber",
   "orderDetails.removeNoteBtn": "Remove",
   "orderDetails.shipTo": "Ship to",
+  "orderDetails.suffix.deprecated": "{name} (deprecated)",
   "orderDetails.vendor": "Vendor",
   "orderDetails.approvalDate": "Approval date",
   "orderDetails.approvedBy": "Approved by",
@@ -852,8 +854,10 @@
   "settings.poNumber.label": "PO number",
   "settings.poNumber.modifier.name": "Name",
   "settings.poNumber.modifier.description": "Description",
+  "settings.poNumber.modifier.deprecated": "Deprecated",
   "settings.poNumber.prefixes": "Prefixes",
   "settings.poNumber.prefix": "Prefix",
+  "settings.poNumber.prefix.aria-label.deprecated": "Mark {name} as deprecated",
   "settings.poNumber.prefix.cannotDeleteTermHeader": "Cannot delete the prefix",
   "settings.poNumber.prefix.cannotDeleteTermMessage": "This prefix cannot be deleted, as it is in use by one or more records.",
   "settings.poNumber.prefix.deleteEntry": "Delete prefix",
@@ -861,6 +865,7 @@
   "settings.poNumber.prefix.termWillBeDeleted": "The prefix <b>{term}</b> will be <b>deleted.</b>",
   "settings.poNumber.suffixes": "Suffixes",
   "settings.poNumber.suffix": "Suffix",
+  "settings.poNumber.suffix.aria-label.deprecated": "Mark {name} as deprecated",
   "settings.poNumber.suffix.cannotDeleteTermHeader": "Cannot delete the suffix",
   "settings.poNumber.suffix.cannotDeleteTermMessage": "This suffix cannot be deleted, as it is in use by one or more records.",
   "settings.poNumber.suffix.deleteEntry": "Delete suffix",
