--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -849,6 +849,7 @@
   "settings.poNumber.label": "PO number",
   "settings.poNumber.modifier.name": "Name",
   "settings.poNumber.modifier.description": "Description",
+  "settings.poNumber.modifier.deprecated": "Deprecated",
   "settings.poNumber.prefixes": "Prefixes",
   "settings.poNumber.prefix": "Prefix",
   "settings.poNumber.prefix.cannotDeleteTermHeader": "Cannot delete the prefix",
