[UIOR-1450] refactor: :globe_with_meridians: Use deprecated translation in POForm

--- a/translations/ui-orders/de.json
+++ b/translations/ui-orders/de.json
@@ -64,6 +64,7 @@
     "orderDetails.billTo": "Rechnungsadresse",
     "orderDetails.createdBy": "Erstellt von",
     "orderDetails.createdOn": "Erstellt am",
+    "orderDetails.deprecated": "veraltet",
     "orderDetails.orderType": "Bestellungstyp",
     "orderDetails.poNumber": "Bestellnummer",
     "orderDetails.shipTo": "Lieferadresse",
