[UIOR-1450] refactor: :recycle: Split getPrefixSuffixOptions separate functions

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -451,17 +451,18 @@
   "orderDetails.billTo": "Bill to",
   "orderDetails.createdBy": "Created by",
   "orderDetails.createdOn": "Created on",
-  "orderDetails.deprecated": "{name} (deprecated)",
   "orderDetails.manualPO": "Manual",
   "orderDetails.manualPO.info": "When this checkbox is active the order will be excluded from any automated transmission. No matter what other settings are active for the order lines or related organization.",
   "orderDetails.note": "Note",
   "orderDetails.orderNumberPrefix": "Prefix",
   "orderDetails.orderNumberSuffix": "Suffix",
   "orderDetails.orderType": "Order type",
+  "orderDetails.prefix.deprecated": "{name} (deprecated)",
   "orderDetails.poNumber": "PO number",
   "orderDetails.reEncumber": "Re-encumber",
   "orderDetails.removeNoteBtn": "Remove",
   "orderDetails.shipTo": "Ship to",
+  "orderDetails.suffix.deprecated": "{name} (deprecated)",
   "orderDetails.vendor": "Vendor",
   "orderDetails.approvalDate": "Approval date",
   "orderDetails.approvedBy": "Approved by",
