--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -855,6 +855,7 @@
   "settings.poNumber.modifier.deprecated": "Deprecated",
   "settings.poNumber.prefixes": "Prefixes",
   "settings.poNumber.prefix": "Prefix",
+  "settings.poNumber.prefix.aria-label.deprecated": "Mark {name} as deprecated",
   "settings.poNumber.prefix.cannotDeleteTermHeader": "Cannot delete the prefix",
   "settings.poNumber.prefix.cannotDeleteTermMessage": "This prefix cannot be deleted, as it is in use by one or more records.",
   "settings.poNumber.prefix.deleteEntry": "Delete prefix",
@@ -862,6 +863,7 @@
   "settings.poNumber.prefix.termWillBeDeleted": "The prefix <b>{term}</b> will be <b>deleted.</b>",
   "settings.poNumber.suffixes": "Suffixes",
   "settings.poNumber.suffix": "Suffix",
+  "settings.poNumber.suffix.aria-label.deprecated": "Mark {name} as deprecated",
   "settings.poNumber.suffix.cannotDeleteTermHeader": "Cannot delete the suffix",
   "settings.poNumber.suffix.cannotDeleteTermMessage": "This suffix cannot be deleted, as it is in use by one or more records.",
   "settings.poNumber.suffix.deleteEntry": "Delete suffix",
