--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -479,6 +479,7 @@
   "orderSummary.closingReason": "Reason for closure",
   "orderSummary.totalEncumbered": "Total encumbered",
   "orderSummary.totalEstimatedPrice": "Total estimated price",
+  "orderSummary.totalEstimatedPrice.exchanged": "Total estimated price (Exchanged)",
   "orderSummary.totalExpended": "Total expended",
   "orderSummary.totalCredited": "Total credited",
   "orderSummary.totalUnits": "Total units",
