UIOR-1288 Improve handling of failed requests in orders and order lines search

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -215,6 +215,7 @@
   "errors.orderLinesNotLoaded": "Error while loading PO Lines",
   "errors.orderNumberIsNotValid": "Order number is not valid",
   "errors.orderOpen": "Order cannot be modified in open status",
+  "errors.ordersNotLoadedGeneric": "Error while loading purchase orders.",
   "errors.orderWasNotDeleted": "Error while deleting purchase order",
   "errors.organizationNotAVendor": "Order cannot be opened as the associated vendorId belongs to non-vendor organization",
   "errors.partiallyReturnedCollection": "Not all holdings records could be found",
@@ -235,6 +236,7 @@
   "errors.suffixIsUsed": "The suffix cannot be deleted as it is used by one or more orders",
   "errors.suffixNotFound": "The suffix is not available",
   "errors.titleNotFound": "The receiving title(s) could not be found",
+  "errors.tooLargeRequest": "The search request is too large. Please reduce the number of filters or shorten the search term and try again.",
   "errors.userHasMissedAffiliations": "Operation failed. This record has location affiliations that your user does not have. These affiliations must be removed or the operation must be performed by a user that has the same affiliations as the record.",
   "errors.userHasNoAcqUnitsPermission": "User does not have permissions to manage acquisition units assignments - operation is restricted",
   "errors.userHasNoApprovalPermission": "User does not have permissions to approve order - operation is restricted",
