--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -665,8 +665,8 @@
   "relatedAgreementLines.status.draft": "Draft",
   "relatedAgreementLines.status.in_negotiation": "In negotiation",
   "relatedAgreementLines.status.requested": "Requested",
-  "relatedInvoices.expendedAmount": "Expended amount",
   "relatedInvoices.invoice": "Invoice #",
+  "relatedInvoices.invoiceAmount": "Invoice amount",
   "relatedInvoices.invoiceDate": "Invoice date",
   "relatedInvoices.quantity": "Quantity",
   "relatedInvoices.status": "Status",
