UIOR-1489 Fix capitalizing for custom fields labels

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -745,8 +745,8 @@
   "settings.createInventory.recordType.instance": "Instance",
   "settings.createInventory.recordType.instanceAndHolding": "Instance, holdings",
   "settings.createInventory.recordType.none": "None",
-  "settings.customFields.purchaseOrders": "Custom Fields - purchase orders",
-  "settings.customFields.purchaseOrderLines": "Custom Fields - purchase order lines",
+  "settings.customFields.purchaseOrders.label": "Custom fields - purchase orders",
+  "settings.customFields.purchaseOrderLines.label": "Custom fields - purchase order lines",
   "settings.general.label": "General",
   "settings.index.paneTitle": "Orders",
   "settings.inventoryInteraction.label": "Inventory interaction",
