--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -166,7 +166,7 @@
   "errors.forbiddenDeleteSystemValues": "Can not delete system values",
   "errors.forbiddenDeleteUsedValue": "This value can not be deleted",
   "errors.fundCannotBePaid": "One or more fund distributions on this order can not be encumbered, because there is not enough money in <b>{fundCodes}</b>.",
-  "errors.fundsNotFound": "The fund records are not found",
+  "errors.fundsNotFound": "One or more funds could not be loaded. The fund(s) may have been deleted or you may not have permission to view the associated fund(s).",
   "errors.holdingsByIdNotFoundError": "Holdings with ids not found",
   "errors.idMismatch": "Mismatch between id in path and request body",
   "errors.incorrectFundDistributionTotal": "Fund distribution total must add to 100% or totalPrice",
