update translation key

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -293,8 +293,6 @@
   "filter.updatedBy": "Updated by",
   "filter.dateUpdated": "Date updated",
 
-  "holdings.deleteModal.message": "This PO Line is connected to records in inventory. After this edit there will be no other purchase order lines, pieces OR items connected to the related Holdings record(s). After making this change would you like FOLIO to delete the Holdings record(s)?",
-
   "fund.fundIdentifier": "Fund ID",
   "fund.selectAdjustment": "Select adjustment",
   "fund.value": "Value",
@@ -374,6 +372,7 @@
   "line.changeInstance.notMovedItems": "Items that could not be moved",
   "line.changeInstance.relatedItems.error": "Failed to load items for tenant(s): <b>{tenants}</b>",
   "line.changeInstance.success": "Order instance connection has been successfully updated",
+  "line.holdings.deleteModal.message": "This PO Line is connected to records in inventory. After this edit there will be no other purchase order lines, pieces OR items connected to the related Holdings record(s). After making this change would you like FOLIO to delete the Holdings record(s)?",
   "lineListing.titleOrPackage": "Title or package name",
   "lineListing.productId": "Product ID",
   "lineListing.refNumber": "Vendor reference number",
