UIOR-1492 Complete email template settings, Part 2
- Add token constants and validation
- Add TokensList component for token picker
- Add ExpandAllButton and Preview to detail view
- Fix button styles (Save & close, Cancel size)

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -826,6 +826,7 @@
   "settings.orderTemplates.save.error": "The template was not saved",
 
   "settings.emailTemplates.label": "Email templates - Purchase Orders",
+  "settings.emailTemplates.new": "New email template",
   "settings.emailTemplates.generalInformation": "General information",
   "settings.emailTemplates.name": "Template name",
   "settings.emailTemplates.description": "Description",
@@ -835,7 +836,16 @@
   "settings.emailTemplates.templateContent": "Template content",
   "settings.emailTemplates.subject": "Email subject",
   "settings.emailTemplates.body": "Email body",
-  "settings.emailTemplates.body.hint": "You can use tokens like {{order.poNumber}} to insert dynamic values. Token support will be added in a future update.",
+  "settings.emailTemplates.body.hint": "Use the token picker on the right to insert dynamic values into your template.",
+  "settings.emailTemplates.preview": "Preview",
+  "settings.emailTemplates.previewHeader": "Preview of template: {name}",
+  "settings.emailTemplates.tokens.vendor": "Vendor",
+  "settings.emailTemplates.tokens.order": "Order",
+  "settings.emailTemplates.tokens.orderLines": "Order lines",
+  "settings.emailTemplates.tokens.library": "Library",
+  "settings.emailTemplates.validation.nameRequired": "Template name is required",
+  "settings.emailTemplates.validation.subjectRequired": "Email subject is required",
+  "settings.emailTemplates.validation.bodyRequired": "Email body is required",
 
   "settings.orderTemplateCategories": "Order template categories",
   "settings.orderTemplateCategories.sub": "Categories",
