UIOR-1492 Revise tokens and fix detail preview
- Replace loop pseudo-tokens with loopConfig
- Expand token list (ISBN, publisher, shipTo, etc.)
- Fix preview bug: use tokensReducer correctly

--- a/translations/ui-orders/en.json
+++ b/translations/ui-orders/en.json
@@ -842,6 +842,7 @@
   "settings.emailTemplates.tokens.vendor": "Vendor",
   "settings.emailTemplates.tokens.order": "Order",
   "settings.emailTemplates.tokens.orderLines": "Order lines",
+  "settings.emailTemplates.tokens.multipleOrderLines": "Multiple order lines",
   "settings.emailTemplates.tokens.library": "Library",
   "settings.emailTemplates.validation.nameRequired": "Template name is required",
   "settings.emailTemplates.validation.subjectRequired": "Email subject is required",
